[gd_scene load_steps=22 format=4 uid="uid://cjfwtnif0l4un"]

[ext_resource type="Script" uid="uid://c3e7klwqfq6p5" path="res://scenes/intro_1.gd" id="1_cmnvx"]
[ext_resource type="Texture2D" uid="uid://wbqenoj8qbsw" path="res://World/GrassBackground.png" id="2_bml7g"]
[ext_resource type="Texture2D" uid="uid://b55nugjkop0r7" path="res://World/Tree.png" id="3_bml7g"]
[ext_resource type="PackedScene" uid="uid://f471d3jqxxn8" path="res://World/tree.tscn" id="4_y7thu"]
[ext_resource type="PackedScene" uid="uid://klj6jfurawvt" path="res://Player/player.tscn" id="5_n72jd"]
[ext_resource type="Texture2D" uid="uid://oosw8fpo0rso" path="res://World/DirtTileset.png" id="6_n72jd"]
[ext_resource type="PackedScene" uid="uid://bvufhr5pect00" path="res://World/camera_2d.tscn" id="7_hq1bd"]
[ext_resource type="PackedScene" uid="uid://bbdu7k265nfrv" path="res://Player/health_ui.tscn" id="8_pxffc"]
[ext_resource type="AudioStream" uid="uid://bb44twsjbc2t8" path="res://Music and Sounds/normal_bg.mp3" id="9_kmdoq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hq1bd"]
texture = ExtResource("6_n72jd")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/bottom_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/right_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/left_side = 0
5:3/0/terrains_peering_bit/top_left_corner = 0
5:3/0/terrains_peering_bit/top_side = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
6:3/0/terrains_peering_bit/top_side = 0
6:3/0/terrains_peering_bit/top_right_corner = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 0
7:3/0/terrains_peering_bit/left_side = 0
7:3/0/terrains_peering_bit/top_side = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/bottom_left_corner = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_side = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_left_corner = 0
7:1/0/terrains_peering_bit/top_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/left_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/left_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/bottom_left_corner = 0
5:0/0/terrains_peering_bit/left_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/top_side = 0
4:1/0/terrains_peering_bit/top_right_corner = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_left_corner = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_right_corner = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/bottom_left_corner = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/bottom_right_corner = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/bottom_left_corner = 0
5:2/0/terrains_peering_bit/left_side = 0
5:2/0/terrains_peering_bit/top_left_corner = 0
5:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/right_side = 0
4:2/0/terrains_peering_bit/bottom_right_corner = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/top_side = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/terrains_peering_bit/right_side = 0
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/top_side = 0
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/terrain = 0
5:4/0/terrains_peering_bit/bottom_side = 0
5:4/0/terrains_peering_bit/bottom_left_corner = 0
5:4/0/terrains_peering_bit/left_side = 0
5:4/0/terrains_peering_bit/top_left_corner = 0
5:4/0/terrains_peering_bit/top_side = 0
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/terrain = 0
6:4/0/terrains_peering_bit/right_side = 0
6:4/0/terrains_peering_bit/bottom_right_corner = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/top_side = 0
6:4/0/terrains_peering_bit/top_right_corner = 0
7:4/0 = 0
7:4/0/terrain_set = 0
7:4/0/terrain = 0
7:4/0/terrains_peering_bit/bottom_side = 0
7:4/0/terrains_peering_bit/left_side = 0
7:4/0/terrains_peering_bit/top_side = 0
8:4/0 = 0
8:4/0/terrain_set = 0
8:4/0/terrain = 0
8:4/0/terrains_peering_bit/right_side = 0
8:4/0/terrains_peering_bit/bottom_side = 0
8:4/0/terrains_peering_bit/left_side = 0
8:4/0/terrains_peering_bit/top_side = 0
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/terrain = 0
8:3/0/terrains_peering_bit/right_side = 0
8:3/0/terrains_peering_bit/left_side = 0
8:3/0/terrains_peering_bit/top_side = 0
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/terrain = 0
8:2/0/terrains_peering_bit/right_side = 0
8:2/0/terrains_peering_bit/bottom_right_corner = 0
8:2/0/terrains_peering_bit/bottom_side = 0
8:2/0/terrains_peering_bit/bottom_left_corner = 0
8:2/0/terrains_peering_bit/left_side = 0
8:2/0/terrains_peering_bit/top_side = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_left_corner = 0
8:1/0/terrains_peering_bit/top_side = 0
8:1/0/terrains_peering_bit/top_right_corner = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/terrains_peering_bit/right_side = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/left_side = 0
9:0/0 = 0
9:0/0/terrain_set = 0
9:0/0/terrain = 0
9:0/0/terrains_peering_bit/right_side = 0
9:0/0/terrains_peering_bit/bottom_right_corner = 0
9:0/0/terrains_peering_bit/bottom_side = 0
9:0/0/terrains_peering_bit/left_side = 0
9:0/0/terrains_peering_bit/top_left_corner = 0
9:0/0/terrains_peering_bit/top_side = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrain = 0
9:1/0/terrains_peering_bit/right_side = 0
9:1/0/terrains_peering_bit/bottom_side = 0
9:1/0/terrains_peering_bit/bottom_left_corner = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_side = 0
9:1/0/terrains_peering_bit/top_right_corner = 0
9:2/0 = 0
9:2/0/terrain_set = 0
9:2/0/terrain = 0
9:2/0/terrains_peering_bit/right_side = 0
9:2/0/terrains_peering_bit/bottom_right_corner = 0
9:2/0/terrains_peering_bit/bottom_side = 0
9:2/0/terrains_peering_bit/left_side = 0
9:2/0/terrains_peering_bit/top_side = 0
9:3/0 = 0
9:3/0/terrain_set = 0
9:3/0/terrain = 0
9:3/0/terrains_peering_bit/right_side = 0
9:3/0/terrains_peering_bit/bottom_side = 0
9:3/0/terrains_peering_bit/left_side = 0
9:3/0/terrains_peering_bit/top_side = 0
9:3/0/terrains_peering_bit/top_right_corner = 0
10:3/0 = 0
10:3/0/terrain_set = 0
10:3/0/terrain = 0
10:3/0/terrains_peering_bit/right_side = 0
10:3/0/terrains_peering_bit/bottom_side = 0
10:3/0/terrains_peering_bit/left_side = 0
10:3/0/terrains_peering_bit/top_left_corner = 0
10:3/0/terrains_peering_bit/top_side = 0
10:2/0 = 0
10:2/0/terrain_set = 0
10:2/0/terrain = 0
10:2/0/terrains_peering_bit/right_side = 0
10:2/0/terrains_peering_bit/bottom_side = 0
10:2/0/terrains_peering_bit/bottom_left_corner = 0
10:2/0/terrains_peering_bit/left_side = 0
10:2/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_pxffc"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_hq1bd")

[sub_resource type="TileMapPattern" id="TileMapPattern_hq1bd"]
tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 1, 131072, 0, 2, 1, 65536, 0, 65537, 65536, 1, 131073, 65536, 2)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hq1bd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pxffc"]
texture = ExtResource("3_bml7g")
0:0/size_in_atlas = Vector2i(2, 3)
0:0/0 = 0
0:0/0/y_sort_origin = 6

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_kmdoq"]
scenes/1/scene = ExtResource("4_y7thu")

[sub_resource type="TileSet" id="TileSet_n72jd"]
tile_size = Vector2i(32, 16)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
physics_layer_0/physics_material = SubResource("PhysicsMaterial_hq1bd")
sources/0 = SubResource("TileSetAtlasSource_pxffc")
sources/1 = SubResource("TileSetScenesCollectionSource_kmdoq")
pattern_0 = SubResource("TileMapPattern_hq1bd")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxffc"]
size = Vector2(32, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmdoq"]
size = Vector2(20, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_df3d4"]
size = Vector2(20, 137)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omrqw"]
size = Vector2(192, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xou62"]
size = Vector2(34, 144)

[node name="intro1" type="Node2D"]
z_as_relative = false
y_sort_enabled = true
script = ExtResource("1_cmnvx")

[node name="background" type="Sprite2D" parent="."]
z_index = -1
texture_repeat = 2
position = Vector2(3.8147e-06, 0)
scale = Vector2(1.19349, 1)
texture = ExtResource("2_bml7g")
region_enabled = true
region_rect = Rect2(-792, -424, 1824, 960)

[node name="dirttilemap" type="TileMapLayer" parent="."]
z_index = -1
texture_filter = 1
tile_map_data = PackedByteArray("AAAVAAUAAQACAAIAAAAVAAQAAQACAAEAAAAVAAMAAQACAAAAAAAUAAUAAQABAAIAAAAUAAQAAQABAAEAAAAUAAMAAQABAAAAAAATAAUAAQABAAIAAAATAAQAAQABAAEAAAATAAMAAQABAAAAAAASAAUAAQABAAIAAAASAAQAAQABAAEAAAASAAMAAQABAAAAAAARAAUAAQABAAIAAAARAAQAAQABAAEAAAARAAMAAQABAAAAAAAQAAUAAQABAAIAAAAQAAQAAQABAAEAAAAQAAMAAQABAAAAAAAPAAUAAQABAAIAAAAPAAQAAQABAAEAAAAPAAMAAQABAAAAAAAOAAUAAQABAAIAAAAOAAQAAQABAAEAAAAOAAMAAQABAAAAAAANAAUAAQABAAIAAAANAAQAAQABAAEAAAANAAMAAQAFAAIAAAAMAAUAAQABAAIAAAAMAAQAAQABAAEAAAAMAAMAAQAGAAIAAAALAAUAAQABAAIAAAALAAQAAQABAAEAAAALAAMAAQABAAAAAAAKAAUAAQABAAIAAAAKAAQAAQABAAEAAAAKAAMAAQABAAAAAAAJAAUAAQABAAIAAAAJAAQAAQABAAEAAAAJAAMAAQABAAAAAAAIAAUAAQABAAIAAAAIAAQAAQABAAEAAAAIAAMAAQABAAAAAAAHAAUAAQABAAIAAAAHAAQAAQABAAEAAAAHAAMAAQABAAAAAAAGAAUAAQABAAIAAAAGAAQAAQABAAEAAAAGAAMAAQABAAAAAAAFAAUAAQABAAIAAAAFAAQAAQABAAEAAAAFAAMAAQABAAAAAAAEAAUAAQABAAIAAAAEAAQAAQABAAEAAAAEAAMAAQABAAAAAAADAAUAAQABAAIAAAADAAQAAQABAAEAAAADAAMAAQABAAAAAAACAAUAAQABAAIAAAACAAQAAQABAAEAAAACAAMAAQABAAAAAAABAAUAAQABAAIAAAABAAQAAQABAAEAAAABAAMAAQABAAAAAAAAAAUAAQABAAIAAAAAAAQAAQABAAEAAAAAAAMAAQABAAAAAAD//wUAAQABAAIAAAD//wQAAQABAAEAAAD//wMAAQABAAAAAAD+/wUAAQABAAIAAAD+/wQAAQABAAEAAAD+/wMAAQABAAAAAAD9/wUAAQABAAIAAAD9/wQAAQABAAEAAAD9/wMAAQABAAAAAAD8/wUAAQAAAAIAAAD8/wQAAQAAAAEAAAD8/wMAAQAAAAAAAAANAAIAAQAFAAQAAAANAAEAAQAFAAQAAAANAAAAAQACAAEAAAANAP//AQACAAEAAAANAP7/AQACAAEAAAANAP3/AQACAAEAAAANAPz/AQACAAEAAAANAPv/AQACAAAAAAAMAAIAAQAGAAQAAAAMAAEAAQAAAAEAAAAMAAAAAQAGAAQAAAAMAP//AQAAAAEAAAAMAP7/AQAAAAEAAAAMAP3/AQAAAAEAAAAMAPz/AQAAAAEAAAAMAPv/AQAAAAAAAAA=")
tile_set = SubResource("TileSet_pxffc")

[node name="TreeTile" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAQABAAAAAQAAAAAAAQACAAAAAQAAAAAAAQADAAAAAQAAAAAAAQAEAAAAAQAAAAAAAQAFAAAAAQAAAAAAAQAIAAAAAQAAAAAAAQAJAAAAAQAAAAAAAQAKAAAAAQAAAAAAAQAAAAEAAQAAAAAAAQABAAEAAQAAAAAAAQACAAEAAQAAAAAAAQADAAEAAQAAAAAAAQAEAAEAAQAAAAAAAQAFAAEAAQAAAAAAAQAIAAEAAQAAAAAAAQAJAAEAAQAAAAAAAQAKAAEAAQAAAAAAAQAAAAgAAQAAAAAAAQABAAgAAQAAAAAAAQACAAgAAQAAAAAAAQAEAAgAAQAAAAAAAQAFAAgAAQAAAAAAAQAGAAgAAQAAAAAAAQAHAAgAAQAAAAAAAQAIAAgAAQAAAAAAAQAJAAgAAQAAAAAAAQAKAAgAAQAAAAAAAQAAAAkAAQAAAAAAAQABAAkAAQAAAAAAAQACAAkAAQAAAAAAAQADAAkAAQAAAAAAAQAEAAkAAQAAAAAAAQAFAAkAAQAAAAAAAQAGAAkAAQAAAAAAAQAHAAkAAQAAAAAAAQAIAAkAAQAAAAAAAQAJAAkAAQAAAAAAAQAKAAkAAQAAAAAAAQAAAAoAAQAAAAAAAQABAAoAAQAAAAAAAQACAAoAAQAAAAAAAQADAAoAAQAAAAAAAQAEAAoAAQAAAAAAAQAFAAoAAQAAAAAAAQAGAAoAAQAAAAAAAQAHAAoAAQAAAAAAAQAIAAoAAQAAAAAAAQAJAAoAAQAAAAAAAQAKAAoAAQAAAAAAAQAAAAwAAQAAAAAAAQABAAsAAQAAAAAAAQABAAwAAQAAAAAAAQACAAwAAQAAAAAAAQADAAwAAQAAAAAAAQAEAAwAAQAAAAAAAQAFAAwAAQAAAAAAAQAGAAwAAQAAAAAAAQAHAAwAAQAAAAAAAQAIAAwAAQAAAAAAAQAJAAwAAQAAAAAAAQAKAAwAAQAAAAAAAQAHAAEAAQAAAAAAAQAHAAAAAQAAAAAAAQAHAP//AQAAAAAAAQD/////AQAAAAAAAQD//wAAAQAAAAAAAQD//wEAAQAAAAAAAQD//wgAAQAAAAAAAQD//wkAAQAAAAAAAQD//woAAQAAAAAAAQD//wsAAQAAAAAAAQD//wwAAQAAAAAAAQD+/wEAAQAAAAAAAQD+/wAAAQAAAAAAAQD+////AQAAAAAAAQD+//7/AQAAAAAAAQD+/wgAAQAAAAAAAQD+/wkAAQAAAAAAAQD+/woAAQAAAAAAAQD+/wsAAQAAAAAAAQD+/wwAAQAAAAAAAQAFAP7/AQAAAAAAAQAEAP7/AQAAAAAAAQADAP7/AQAAAAAAAQACAP7/AQAAAAAAAQABAP7/AQAAAAAAAQABAP//AQAAAAAAAQAAAP//AQAAAAAAAQAAAP7/AQAAAAAAAQD///7/AQAAAAAAAQAIAP7/AQAAAAAAAQAJAP7/AQAAAAAAAQAKAP7/AQAAAAAAAQAHAP3/AQAAAAAAAQAIAP3/AQAAAAAAAQAJAP3/AQAAAAAAAQAKAP3/AQAAAAAAAQADAP3/AQAAAAAAAQACAP3/AQAAAAAAAQABAP3/AQAAAAAAAQAAAP3/AQAAAAAAAQD///3/AQAAAAAAAQD+//3/AQAAAAAAAQAFAP3/AQAAAAAAAQAEAP3/AQAAAAAAAQADAAgAAQAAAAAAAQA=")
tile_set = SubResource("TileSet_n72jd")

[node name="Camera2D" parent="." instance=ExtResource("7_hq1bd")]
position = Vector2(288, 72)

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2(-64, -72)

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2(352, 200)

[node name="player" parent="." instance=ExtResource("5_n72jd")]
position = Vector2(288, 72)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="player"]
remote_path = NodePath("../../Camera2D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource("8_pxffc")]
offset_left = 8.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="HelpDialog" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HelpDialog"]
position = Vector2(208, 88)
shape = SubResource("RectangleShape2D_pxffc")

[node name="ExitLeft" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitLeft"]
position = Vector2(-56, 72)
shape = SubResource("RectangleShape2D_kmdoq")

[node name="Exit" type="StaticBody2D" parent="ExitLeft"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitLeft/Exit"]
position = Vector2(-72, 67.5)
shape = SubResource("RectangleShape2D_df3d4")

[node name="ExitUp" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitUp"]
position = Vector2(208, -72)
shape = SubResource("RectangleShape2D_omrqw")

[node name="Entry" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entry"]
position = Vector2(368, 72)
shape = SubResource("RectangleShape2D_xou62")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_kmdoq")
autoplay = true
parameters/looping = true

[connection signal="area_entered" from="HelpDialog" to="." method="_on_help_dialog_area_entered"]
[connection signal="body_entered" from="HelpDialog" to="." method="_on_help_dialog_body_entered"]
[connection signal="body_entered" from="ExitLeft" to="." method="_on_exit_body_entered"]
[connection signal="body_entered" from="ExitUp" to="." method="_on_exit_up_body_entered"]

[editable path="Camera2D"]
